--- a/index.css
+++ b/index.css
@@ -189,6 +189,12 @@ p {
     margin-left: 0;
 }
 
+#length-text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #passW-length {
     width: 50px;
     height: 30px;
