--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ p {
     margin-left: 52px;
     gap: 0px;
     opacity: 0px;
-    font-family: Inter;
+    font-family: Inter, sans-serif;
     font-size: 20px;
     font-weight: 400;
     size: 20px;
