--- a/index.css
+++ b/index.css
@@ -81,14 +81,14 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: start;
-    width: 446px;
+    width: 460px;
     margin-left: 52px;  
 }
 
 .first-pass-container {
     display: flex;
     align-items: center;
-    width: 211px;
+    width: 230px;
     height: 39px;
     margin-top: 35px;
     gap: 0px;
@@ -113,9 +113,10 @@ p {
 .second-pass-container {
     display: flex;
     align-items: center;
-    width: 211px;
+    width: 230px;
     height: 39px;
     margin-top: 35px;
+    margin-left: 16px;
     gap: 0px;
     border-radius: 6px;
     background-color: #2F3E53;
